--- a/survey.html
+++ b/survey.html
@@ -9,7 +9,7 @@
     html, body {
       margin: 0; padding: 0; height: 100%;
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #0d1117, #161b22);
+      background: linear-gradient(135deg, #6a85b6, #bac8e0);
       color: white;
       display: flex;
       justify-content: center;
